--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       border-left: 4px solid #38bdf8;
       padding-left: 20px;
       margin-left: 10px;
+      animation-name: left;
+  animation-duration: 10s; animation-iteration-count: infinite;
     }
 
     .timeline-item {
@@ -130,7 +132,8 @@ details > summary {
   font-size: 2rem;
 }
 ul{border: 2px solid white;
-border-radius: 5px;
+border-radius: 5px;animation-name: portrait;
+  animation-duration: 5s; animation-iteration-count: infinite;
 }
 
 
@@ -180,6 +183,15 @@ border-radius: 5px;
 
  
 }
+@keyframes left {
+  0% {border-left: 4px solid rgb(0, 247, 255);}
+  50% {border-left: 4px solid rgb(255, 0, 0);}
+  75% {border-left: 4px solid rgb(0, 195, 255);}
+  100%{border-left: 4px solid rgb(0, 247, 255);}
+
+ 
+}
+
 
   </style>
 </head>
