Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@ border-radius: 5px;animation-name: portrait;
         <li>Debugging, Testing & UI Design</li>
       </ul>
     
-    <div><details><summary><h2>Here is my past Codeathon project<img style="width:80px" class="gif" src="gif.gif"></h2></summary>
+    <div><details><summary><h2>Here is the current website I am working on for my school:<img style="width:80px" class="gif" src="gif.gif"></h2></summary>
     
     <div class="img-box">
-      <a href="https://nahomhsach.github.io/Codeathon-Product/" target="_blank"><img src="cthonprj.png"></a>
+      <a href="https://nahomhsach.github.io/lift-lab/" target="_blank"><img src="LiftLab.png"></a>
     </div></details></div>
   </section>
 
@@ -322,3 +322,4 @@ border-radius: 5px;animation-name: portrait;
 
 </body>
 </html>
+
