Refactor index.html to restore original content

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ border-radius: 5px;animation-name: portrait;
     <div><details><summary><h2>Here is the current website I am working on for my school:<img style="width:80px" class="gif" src="gif.gif"></h2></summary>
     
     <div class="img-box">
-      <a href="https://nahomhsach.github.io/lift-lab/" target="_blank"><img src="LiftLab.png"></a>
+      <a href="https://nahomhsach.github.io/LiftLab/" target="_blank"><img src="LiftLab.png"></a>
     </div></details></div>
   </section>
 
@@ -322,4 +322,5 @@ border-radius: 5px;animation-name: portrait;
 
 </body>
 </html>
+
 
